--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.0.2",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.17",
