--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.0.17",
-    "tailwindcss": "^4.0.17",
     "eslint": "^9.23.0",
     "eslint-config-next": "15.2.4",
-    "@eslint/eslintrc": "^3.3.1"
+    "tailwindcss": "^4.1.3"
   }
 }
